--- a/page-register/register.html
+++ b/page-register/register.html
@@ -1,3 +1,4 @@
+
 <!--
 Author: W3layouts
 Author URL: http://w3layouts.com
@@ -11,9 +12,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <link href="../css/style.css" rel="stylesheet" type="text/css"  media="all" />
     <meta name="keywords" content="Mobilestore iphone web template, Andriod web template, Smartphone web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
     <link href='http://fonts.googleapis.com/css?family=Londrina+Solid|Coda+Caption:800|Open+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/responsiveslides.css">
+    <link rel="stylesheet" href="../css/responsiveslides.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="js/responsiveslides.min.js"></script>
+    <link href="../js/responsiveslides.min.js">
+    <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
     <script>
         // You can also use "$(window).load(function() {"
         $(function () {
@@ -39,8 +41,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="header-top-nav">
             <ul>
                 <li><a href="#">Register</a></li>
-                <li><a href="../page-login/login">Login</a></li>
-                <li><a href="../page-account/account.html">My account</a></li>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">My account</a></li>
                 <li><a href="#"><span>shopingcart&nbsp;&nbsp;: </span></a><lable> &nbsp;noitems</lable></li>
             </ul>
         </div>
@@ -54,7 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="wrap">
         <!----start-logo---->
         <div class="logo">
-            <a href="index.html"><img src="../images/logo.png" title="logo" /></a>
+            <a href="../index.html"><img src="../images/logo.png" title="logo" /></a>
         </div>
         <!----end-logo---->
         <!----start-top-nav---->
@@ -75,9 +77,58 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <!-- Content -->
 <div class="wrap">
-    <div class="content">
-        <h1>This site is under development!!!</h1>
+    <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
+        <!-- Header section containing logo -->
+        <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
+            <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
+                <div id="user-container">
+                    <div hidden id="user-pic"></div>
+                    <div hidden id="user-name"></div>
+                    <button hidden id="sign-out" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
+                        Sign-out
+                    </button>
+                    <button hidden  id="sign-in" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white" >
+                         Sign-in with Google
+                    </button>
+                </div>
+            </div>
+        </header>
+
+        <main class="mdl-layout__content mdl-color--grey-100">
+            <div id="messages-card-container" class="mdl-cell mdl-cell--12-col mdl-grid">
+
+                <!-- Messages container -->
+                <div id="messages-card" class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--6-col-tablet mdl-cell--6-col-desktop">
+                    <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+                        <div id="messages">
+                            <span id="message-filler"></span>
+                        </div>
+                        <form id="message-form" action="#">
+                            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                                <input class="mdl-textfield__input" type="text" id="message">
+                                <label class="mdl-textfield__label" for="message">Don hang</label>
+                            </div>
+                            <button id="submit" disabled type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                                Xac nhan
+                            </button>
+                        </form>
+                        <form id="image-form" action="#">
+                            <input id="mediaCapture" type="file" accept="image/*,capture=camera">
+                            <button id="submitImage" title="Them anh cua san pham" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--amber-400 mdl-color-text--white">
+                                <i class="material-icons">Add images</i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+
+                <div id="must-signin-snackbar" class="mdl-js-snackbar mdl-snackbar">
+                    <div class="mdl-snackbar__text"></div>
+                    <button class="mdl-snackbar__action" type="button"></button>
+                </div>
+
+            </div>
+        </main>
     </div>
 </div>
 
@@ -120,6 +171,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
     </div>
 </div>
+<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+<script>
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyA5w5ceeRK8qwk4Pd-M0w9T8TQy-JbBnV0",
+        authDomain: "finalproject-mobileshop.firebaseapp.com",
+        databaseURL: "https://finalproject-mobileshop.firebaseio.com",
+        storageBucket: "finalproject-mobileshop.appspot.com",
+    };
+    firebase.initializeApp(config);
+</script>
+<script src="main.js"></script>
 </body>
 </html>
 
